blinking recording button; resets for next video

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -85,7 +85,7 @@ Select icons provided by:
         </form>
       </div>
 
-      <div id="content-prompt-english" class="starter-template">
+      <div id="content-prompt-english" class="starter-template no-margins">
         <h1>1. Introduction</h1>
         <div class="col-md-6 col-md-offset-3">
           <div id="video-wrapper" class="well">
@@ -96,7 +96,7 @@ Select icons provided by:
           <div>
               <button class="btn btn-lg btn-default col-md-offset-0" type="submit" onclick=""><span class="glyphicon glyphicon-chevron-left"></span></button>
               <!-- <button class="btn btn-lg btn-success" type="submit" onclick=""><span class="glyphicon glyphicon-bullhorn"></span></button> -->
-              <button id="recording-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="toggleAudio()"><span class="glyphicon glyphicon-record"></span></button>
+              <button id="recording-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="toggleAudio()"><span id="recording-icon" class="glyphicon glyphicon-record"></span></button>
               <!-- <button class="btn btn-lg btn-success" type="submit" onclick=""><span class="glyphicon glyphicon-pencil"></span></button> -->
               <button id="next-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="nextVideo()"><span class="glyphicon glyphicon-chevron-right"></span></button>
               <!-- <button class="btn btn-lg btn-danger" type="submit" onclick=""><span class="glyphicon glyphicon-exclamation-sign"></span></button> -->
