--- a/public-html/index.html
+++ b/public-html/index.html
@@ -86,7 +86,7 @@ Select icons provided by:
       </div>
 
       <div id="content-prompt-english" class="starter-template no-margins">
-        <h1>1. Introduction</h1>
+        <h1 id="question-title">1. Introduction</h1>
         <div class="col-md-6 col-md-offset-3">
           <div id="video-wrapper" class="well">
             <div class="embed-responsive embed-responsive-4by3">
@@ -101,10 +101,14 @@ Select icons provided by:
               <button id="next-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="nextVideo()"><span class="glyphicon glyphicon-chevron-right"></span></button>
               <!-- <button class="btn btn-lg btn-danger" type="submit" onclick=""><span class="glyphicon glyphicon-exclamation-sign"></span></button> -->
           </div>
+          <p>
+            <br>
+            <!-- Record your answer with the <span class="glyphicon glyphicon-record"></span> button, or type below. -->
+          </p>
           <div>
-            <p>
-              [text box]
-            </p>
+            <form class="form-group">
+              <textarea class="form-control" rows="3" placeholder="Add notes here."></textarea>
+            </form>
           </div>
         </div>
       </div>
