--- a/public-html/index.html
+++ b/public-html/index.html
@@ -83,16 +83,17 @@ Select icons provided by:
       <div id="content-prompt-english" class="starter-template no-margins">
 
         <!-- recording controls -->
-        <audio controls src="" id="audio"></audio>
+        <!-- <audio controls src="" id="audio"></audio> -->
         <div style="margin:10px;">
-          <a class="button" id="record">Record</a>
-          <a class="button disabled one" id="stop">Reset</a>
-          <a class="button disabled one" id="play">Play</a>
-          <a class="button disabled one" id="download">Download</a>
+          <!-- <a class="button" id="record">Record</a> -->
+          <!-- <a class="button disabled one" id="stop">Reset</a> -->
+          <!-- <a class="button disabled one" id="play">Play</a> -->
+          <!-- <a class="button disabled one" id="download">Download</a> -->
         </div>
-        <input class="button" type="checkbox" id="live"/>
-        <label for="live">Live Output</label>
+        <!-- <input class="button" type="checkbox" id="live"/> -->
+        <!-- <label for="live">Live Output</label> -->
 
+<!--
         <style>
         .button{
           display: inline-block;
@@ -124,6 +125,7 @@ Select icons provided by:
           opacity:0.7;
         }
         </style>
+<-->
 
         <h1 id="question-title">1. Introduction</h1>
         <div class="col-md-6 col-md-offset-3">
@@ -134,7 +136,11 @@ Select icons provided by:
           </div>
           <div>
               <button class="btn btn-lg btn-default col-md-offset-0" type="submit" onclick=""><span class="glyphicon glyphicon-chevron-left"></span></button>
-              <button id="recording-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="toggleAudio()"><span id="recording-icon" class="glyphicon glyphicon-record"></span></button>
+              <div id="record">
+                <div id="download" class="disabled">
+                  <button id="recording-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="toggleAudio()"><span id="recording-icon" class="glyphicon glyphicon-record"></span></button>
+                </div>
+              </div>
               <button id="next-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="nextVideo()"><span class="glyphicon glyphicon-chevron-right"></span></button>
           </div>
           <p>
