--- a/public-html/index.html
+++ b/public-html/index.html
@@ -93,40 +93,6 @@ Select icons provided by:
         <!-- <input class="button" type="checkbox" id="live"/> -->
         <!-- <label for="live">Live Output</label> -->
 
-<!--
-        <style>
-        .button{
-          display: inline-block;
-          vertical-align: middle;
-          margin: 0px 5px;
-          padding: 5px 12px;
-          cursor: pointer;
-          outline: none;
-          font-size: 13px;
-          text-decoration: none !important;
-          text-align: center;
-          color:#fff;
-          background-color: #4D90FE;
-          background-image: linear-gradient(top,#4D90FE, #4787ED);
-          background-image: -ms-linear-gradient(top,#4D90FE, #4787ED);
-          background-image: -o-linear-gradient(top,#4D90FE, #4787ED);
-          background-image: linear-gradient(top,#4D90FE, #4787ED);
-          border: 1px solid #4787ED;
-          box-shadow: 0 1px 3px #BFBFBF;
-        }
-        a.button{
-          color: #fff;
-        }
-        .button:hover{
-          box-shadow: inset 0px 1px 1px #8C8C8C;
-        }
-        .button.disabled{
-          box-shadow:none;
-          opacity:0.7;
-        }
-        </style>
-<-->
-
         <h1 id="question-title">1. Introduction</h1>
         <div class="col-md-6 col-md-offset-3">
           <div id="video-wrapper" class="well">
@@ -134,14 +100,20 @@ Select icons provided by:
               <iframe id="video-frame" class="embed-responsive-item" src=""></iframe>
             </div>
           </div>
-          <div>
+          <div class="row">
+            <div class="col-md-1">
               <button class="btn btn-lg btn-default col-md-offset-0" type="submit" onclick=""><span class="glyphicon glyphicon-chevron-left"></span></button>
+            </div>
+            <div class="col-md-1 col-md-offset-4">
               <div id="record">
-                <div id="download" class="disabled">
+                <div id="download" class="disabled one">
                   <button id="recording-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="toggleAudio()"><span id="recording-icon" class="glyphicon glyphicon-record"></span></button>
                 </div>
               </div>
+            </div>
+            <div class="col-md-1 col-md-offset-4">
               <button id="next-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="nextVideo()"><span class="glyphicon glyphicon-chevron-right"></span></button>
+            </div> 
           </div>
           <p>
             <br>
