clears textbox, new warnings
complains to user when microphone permission is denied

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -100,6 +100,8 @@ Select icons provided by:
               <iframe id="video-frame" class="embed-responsive-item" src=""></iframe>
             </div>
           </div>
+
+          <!-- buttons -->
           <div class="row">
             <div class="col-md-1">
               <button class="btn btn-lg btn-default col-md-offset-0" type="submit" onclick=""><span class="glyphicon glyphicon-chevron-left"></span></button>
@@ -115,13 +117,14 @@ Select icons provided by:
               <button id="next-button" class="btn btn-lg btn-default col-md-offset-3" type="submit" onclick="nextVideo()"><span class="glyphicon glyphicon-chevron-right"></span></button>
             </div> 
           </div>
+
           <p>
             <br>
             <!-- Record your answer with the <span class="glyphicon glyphicon-record"></span> button, or type below. -->
           </p>
           <div>
             <form class="form-group">
-              <textarea class="form-control" rows="3" placeholder="Add notes here."></textarea>
+              <textarea id="notes-box" class="form-control" rows="3" placeholder="Add notes here."></textarea>
             </form>
           </div>
         </div>
