--- a/public-html/index.html
+++ b/public-html/index.html
@@ -51,14 +51,37 @@ Select icons provided by:
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li> -->
-            <li><a href="#about"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> About / Información</a></li>
-            <li><a href="#logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out / Salir</a></li>
-            <li><a href="#emergency"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Emergency / Emergencia</a></li>
+            <li><a href="#about" data-toggle="modal" data-target="#modalAbout"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> About / Información</a></li>
+            <li><a href="#logout" onClick="window.location.reload()"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out / Salir</a></li>
+            <li><a href="#emergency" id="emergency" data-toggle="modal" data-target="#modalEmergency"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Emergency / Emergencia</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
+    <!-- About -->
+    <div class="modal fade" id="modalAbout" tabindex="-1" role="dialog" aria-labelledby="modalAboutLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="modalAboutLabel">About / Información</h4>
+          </div>
+          <div class="modal-body">
+            <h4>English</h4>
+            <p>ENTREVISTA is a tool developed for The Second Step, an organization dedicated to the safety, stability, and well-being of survivors of domestic violence.</p>
+            <br>
+            <h4>Español</h4>
+            <p><span class="alt-language">Hola, ...</span></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Main Content Pages -->
     <div class="container">
 
       <div id="content-welcome" class="starter-template">
@@ -83,7 +106,7 @@ Select icons provided by:
         </form>
       </div>
 
-      <div id="content-prompt-english" class="starter-template no-margins">
+      <div id="content-prompt-english" class="starter-template no-margins" style="display:none">
 
         <!-- recording controls -->
         <!-- <a class="button" id="record">Record</a> -->
@@ -101,8 +124,8 @@ Select icons provided by:
             </div>
           </div>
 
-          <!-- buttons -->
-          <div class="row">
+          <!-- standard buttons -->
+          <div class="row" id="userButtons">
             <div class="col-md-1">
               <button class="btn btn-lg btn-default col-md-offset-0" type="submit" onclick=""><span class="glyphicon glyphicon-chevron-left"></span></button>
             </div>
@@ -118,11 +141,16 @@ Select icons provided by:
             </div> 
           </div>
 
-          <p>
-            <br>
-            <!-- Record your answer with the <span class="glyphicon glyphicon-record"></span> button, or type below. -->
-          </p>
-          <div>
+          <!-- emergency buttons -->
+          <div class="row" id="emergencyButtons" style="display:none">
+            <div class="col-md-1 col-md-offset-5">
+              <button class="btn btn-lg btn-default" id="emergencyResume"><span class="glyphicon glyphicon-share-alt"></span></button>
+            </div>
+          </div>
+
+          <p><br></p>
+
+          <div id="userNotes">
             <form class="form-group">
               <textarea id="notes-box" class="form-control" rows="3" placeholder="Add notes here."></textarea>
             </form>
