fixed bugs, added Goodbye screen
- Emergency video no longer plays in background without being signed in
- Going past the last video now displays a Goodbye screen

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -109,12 +109,12 @@ Select icons provided by:
       <div id="content-prompt-english" class="starter-template no-margins" style="display:none">
 
         <!-- recording controls -->
-        <!-- <a class="button" id="record">Record</a> -->
-        <!-- <a class="button disabled one" id="stop">Reset</a> -->
-        <!-- <a class="button disabled one" id="play">Play</a> -->
-        <!-- <a class="button disabled one" id="download">Download</a> -->
-        <!-- <input class="button" type="checkbox" id="live"/> -->
-        <!-- <label for="live">Live Output</label> -->
+<!--         <a class="button" id="record">Record</a>
+        <a class="button disabled one" id="stop">Reset</a>
+        <a class="button disabled one" id="play">Play</a>
+        <a class="button disabled one" id="download">Download</a>
+        <input class="button" type="checkbox" id="live"/>
+        <label for="live">Live Output</label> -->
 
         <h1 id="question-title">1. Introduction</h1>
         <div class="col-md-6 col-md-offset-3">
@@ -156,6 +156,16 @@ Select icons provided by:
             </form>
           </div>
         </div>
+
+      </div>
+
+      <div id="content-goodbye" class="starter-template" style="display:none">
+        <h1>The End</h1>
+        <p class="lead">
+          Thank you.
+          <br>
+          <span class="alt-language">Gracias.</span>
+        </p>
       </div>
 
     </div><!-- /.container -->
