split Logic Tree and URLs into separate .js files
should make editing these long lists easier/modular

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -196,6 +196,8 @@ Select icons provided by:
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
 
+    <script type="text/javascript" src="videoData.js"></script>
+    <script type="text/javascript" src="questionTree.js"></script>
     <script type="text/javascript" src="interview.js"></script>
 
   </body>
