trying to fix guatemala language

--- a/dictation_test/dictation.html
+++ b/dictation_test/dictation.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+<!-- <html lang="en"> -->
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,8 +25,11 @@
   </div>   
   <div class="whatisthis"> 
     <span id="messages"> 
+      <!-- start transcription, request microphone access -->
       <a href="#" onclick="javascript:action();return false;" id="btn">Loading..</a> 
+      <!-- clear the variable d, text of the audio -->
       <a href="#" onclick="javascript:clearSlate();return false;" id="btnClear">Clear</a>
+      <!-- saves the file d -->
       <a href="#" onclick="javascript:save();return false;" id="btnClear" title="Store your file in the cloud">Export</a>       
     <img id="status" src="listen.gif" />
     </span> 
