interviews resume at question returned by database

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -100,7 +100,7 @@ Select icons provided by:
           <input type="text" style="display:none" required> <!-- awful hacky fix so Bootstrap can never try to submit a completed form -->
           <p></p>
           <p>
-            <button class="btn btn-lg btn-primary" onclick="beginInterview('English')">Log In</button>
+            <button class="btn btn-lg btn-primary" id="login" onclick="beginInterview('English')">Log In</button>
             <button class="btn btn-lg btn-warning" onclick="beginInterview('Spanish')">Iniciar Sesión</button>
           </p>
         </form>
