--- a/public-html/index.html
+++ b/public-html/index.html
@@ -151,7 +151,7 @@ Select icons provided by:
           <!-- logic buttons -->
           <div class="row" id="logicButtons" style="display:none">
             <div class="col-md-1 col-md-offset-3">
-              <button class="btn btn-lg btn-default" onclick="answerLogic('yes')">Yes</button>
+              <button class="btn btn-lg btn-default" onclick="answerLogic('yes')">Yes / Sí</button>
             </div>
             <div class="col-md-1 col-md-offset-3">
               <button class="btn btn-lg btn-default" onclick="answerLogic('no')">No</button>
