lookup displays user answers

--- a/public-html/lookup.html
+++ b/public-html/lookup.html
@@ -74,14 +74,10 @@ Select icons provided by:
         </form>
       </div>
 
-      <div id="content-prompt-english" class="starter-template no-margins" style="display:none">
-        <h1 id="question-title">1. Introduction</h1>
-        <div class="col-md-6 col-md-offset-3">
-          <div id="video-wrapper" class="well">
-            <div class="embed-responsive embed-responsive-4by3">
-              <iframe id="video-frame" class="embed-responsive-item" src=""></iframe>
-            </div>
-          </div>
+      <div id="content-answers" class="starter-template no-margins" style="display:none">
+        <h1>Displaying User Answers</h1>
+        <p class="lead" id="subheading">No User Found</p>
+        <div id="answerWrapper"></div>
       </div>
 
     </div><!-- /.container -->
