disabled next/prev while recording
This forces the recording to be "checkmarked" (EXPORTED to blob) before
the user goes to a different question (SUBMITS DATA)

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -127,7 +127,7 @@ Select icons provided by:
           <!-- standard buttons -->
           <div class="row" id="userButtons">
             <div class="col-md-1">
-              <button class="btn btn-lg btn-default col-md-offset-0" type="submit" onclick="prevVideo()"><span class="glyphicon glyphicon-chevron-left"></span></button>
+              <button id="prev-button" class="btn btn-lg btn-default col-md-offset-0" type="submit" onclick="prevVideo()"><span class="glyphicon glyphicon-chevron-left"></span></button>
             </div>
             <div class="col-md-1 col-md-offset-4">
               <div id="record">
