logs for functions

--- a/public-html/dictation.html
+++ b/public-html/dictation.html
@@ -84,6 +84,7 @@
               (See chrome://settings/handlers to change.)
             </p>
           </div>
+          <div id="test">TESTING</div>
         </div>
         <div class="compact marquee" id="div_language">
           <select id="select_language" onchange="updateCountry()">
